--- a/src/app/home_menus/attendance/attendance.page.html
+++ b/src/app/home_menus/attendance/attendance.page.html
@@ -3,78 +3,83 @@
     <ion-grid>
       <ion-row class="toolbar-row">
         <ion-col size="4" class="toolbar-col">
-          <a href="#" class="back_link">
-            <ion-icon name="chevron-back-outline" class="back-button" [routerLink]="['/home']"></ion-icon>
+          <a href="#" class="back_link" (click)="onBackClick($event)">
+            <ion-icon name="chevron-back-outline" class="back-button"></ion-icon>
           </a>
         </ion-col>
+
         <ion-col size="4" class="toolbar-col second_col_img">
-          <img src="/assets/icon/homeicons/sony_light.svg" alt="" class="SONY_mail_logo dark_pta">
-          <img src="/assets/icon/homeicons/sony_dark.svg" alt="" class="SONY_mail_logo light_pta">
+          <img src="/assets/icon/homeicons/sony_light.svg" alt="" class="SONY_mail_logo dark_pta" />
+          <img src="/assets/icon/homeicons/sony_dark.svg" alt="" class="SONY_mail_logo light_pta" />
         </ion-col>
-        <ion-col size="4" class="toolbar-col">
-        </ion-col>
+
+        <ion-col size="4" class="toolbar-col"></ion-col>
       </ion-row>
     </ion-grid>
   </ion-toolbar>
 </ion-header>
 
-
-
-<!-- <ion-content class="main-content">
-  <div class="heading-div">
-    <h6 class="home-headings">Attendance</h6>
-    <p *ngIf="!isCheckedIn; else checkedOutText">(You are currently checked in)</p>
-    <ng-template #checkedOutText>
-      <p>(You are currently checked out)</p>
-    </ng-template>
-  
-    <div class="examtype-buttons">
-      <ion-button (click)="presentCommentAlert()" expand="full" class="products_buttons">
-        {{ isCheckedIn ? 'Check Out' : 'Check In' }}
-      </ion-button>
-    </div>
-  </div>
-</ion-content> -->
-
 <ion-content class="main-content dark light">
   <div class="heading-div">
     <h6 class="home-headings">Attendance</h6>
-    <p *ngIf="!isCheckedIn; else checkedOutText">(You are currently checked out)</p>
-    <ng-template #checkedOutText>
-      <p>(You are currently checked in)</p>
-    </ng-template>
 
-    <div class="examtype-buttons">
-      <form (ngSubmit)="submitAttendance()" *ngIf="showForm">
-        <!-- <ion-item>
-          <ion-textarea
-            [(ngModel)]="comment"
-            name="comment"
-            placeholder="Enter your comment"
-            required
-          ></ion-textarea>
-        </ion-item> -->
-        <ion-item lines="none" class="custom-textarea-item ">
-          <ion-label position="stacked" class="ion-padding">Comment</ion-label>
-          <ion-textarea
-            [(ngModel)]="comment"
-            placeholder="Enter your comment here..."
-            auto-grow="true"
-            class="custom-textarea ion-padding"
-            rows="3">
-          </ion-textarea>
-        </ion-item>
-        
+    <div class="store-heading-wrap" *ngIf="!showForm">
+      <h5 class="store-heading">{{ storeDisplayName }}</h5>
+    </div>
 
-        <ion-button type="submit" expand="full" class="products_buttons">
-          {{ isCheckedIn ? 'Check Out' : 'Check In' }}
-        </ion-button>
-      </form>
+    <!-- Status shown from API-driven isCheckedIn -->
+    <p *ngIf="!isCheckedIn; else checkedInText">(You are currently checked out)</p>
+    <ng-template #checkedInText><p>(You are currently checked in)</p></ng-template>
 
-      <ion-button *ngIf="!showForm" (click)="toggleForm()" expand="full" class="products_buttons">
-        {{ isCheckedIn ? 'Check Out' : 'Check In' }}
-      </ion-button>
+  <!-- Buttons: always visible (enable/disable controlled from TS) -->
+<div class="examtype-buttons">
+  <!-- Check In: disabled when already checked in or processing or no store -->
+  <ion-button
+    expand="full"
+    class="products_buttons"
+    [disabled]="disableCheckIn"
+    [ngClass]="{ 'button-disabled': disableCheckIn }"
+    (click)="onCheckIn()"
+  >
+    <ion-spinner *ngIf="isProcessing && processingAction === 'checkin'" slot="start"></ion-spinner>
+    Check In
+  </ion-button>
+
+  <!-- Check Out: shows a confirmation alert before performing checkout -->
+  <ion-button
+    expand="full"
+    class="products_buttons"
+    [disabled]="disableCheckOut"
+    [ngClass]="{ 'button-disabled': disableCheckOut }"
+    (click)="confirmCheckout()"
+  >
+    <ion-spinner *ngIf="isProcessing && processingAction === 'checkout'" slot="start"></ion-spinner>
+    Check Out
+  </ion-button>
+</div>
+
+
+    <!-- WEEKLY ATTENDANCE -->
+    <div class="weekly-header"><h6>Weekly Attendance</h6></div>
+
+    <div class="table-row header">
+      <div class="cell">Date</div>
+      <div class="cell">Day</div>
+      <div class="cell">Check In</div>
+      <div class="cell">Check Out</div>
+      <div class="cell">Duration</div>
+    </div>
+
+    <div class="table-row" *ngFor="let row of weeklyData ?? []">
+      <div class="cell">{{ row.date }}</div>
+      <div class="cell">{{ row.day }}</div>
+      <div class="cell">{{ row.checkin_time || '-' }}</div>
+      <div class="cell">{{ row.checkout_time || '-' }}</div>
+      <div class="cell duration-cell" [ngClass]="{ 'red-text': row?.working_hours?.minutes < 480 }">
+        {{ row?.working_hours?.hrs || '-' }}
+      </div>
     </div>
   </div>
 </ion-content>
+
 <app-footer></app-footer>
