--- a/src/app/home_menus/daily-promoter-checklist-ques/daily-promoter-checklist-ques.page.html
+++ b/src/app/home_menus/daily-promoter-checklist-ques/daily-promoter-checklist-ques.page.html
@@ -4,7 +4,7 @@
       <ion-row class="toolbar-row">
         <ion-col size="4" class="toolbar-col">
           <a href="#" class="back_link">
-            <ion-icon name="chevron-back-outline" class="back-button" [routerLink]="['/promoter-kpi']"></ion-icon>
+            <ion-icon name="chevron-back-outline" class="back-button" [routerLink]="['/daily-promoter-checklist']"></ion-icon>
           </a>
         </ion-col>
         <ion-col size="4" class="toolbar-col second_col_img">
@@ -17,135 +17,218 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="main-content padding-20 dark light">
-  <div class="heading-div">
-    <h6 class="home-headings">Questions</h6>
-  </div>
-    <!-- sticky unanswered banner (promoter style) -->
+<ion-content class="main-content dark light">
+  <!-- Sticky banner for unanswered items -->
   <div *ngIf="hasTriedSubmit && unansweredCount > 0" class="unanswered-banner">
     {{ unansweredCount }} question(s) need an answer. Please complete them.
   </div>
 
+  <div *ngFor="let question of questions; let i = index"
+       class="question-card margin-bottom-20"
+       [ngClass]="{'unanswered': hasTriedSubmit && isUnanswered(question)}"
+       #qRef>
 
-  <div class="question-container">
-<div #questionCard *ngFor="let question of questions; let i = index; trackBy: trackByQuestion"
-     class="question-card"
-     [ngClass]="{'unanswered': hasTriedSubmit && (question.selectedOption === null || question.selectedOption === undefined)}">
+    <h6 class="questionhead">Question {{ i + 1 }}:</h6>
 
-      <h6 class="questionhead">Question {{ i + 1 }}:</h6>
-      <p class="questionpara">{{ question.body }}</p>
+    <!-- Question body -->
+    <p class="question-body questionpara">{{ question.body }}</p>
 
-      <img *ngIf="question.file_name"
-           [src]="question.file_name"
-           class="question-image"
-           (click)="openImageInBrowser(question.file_name)" />
+    <!-- Optional image -->
+    <img *ngIf="question.file_name"
+         [src]="baseUrl + question.file_name"
+         alt="Question Image"
+         class="question-image"
+         (click)="openImageInBrowser(baseUrl + question.file_name)" />
 
-      <div class="options">
-       <ion-radio-group [(ngModel)]="question.selectedOption">
-  <ion-item class="transparent-item" lines="none">
-    <ion-label>Yes</ion-label>
-    <ion-radio slot="start" [value]="5"></ion-radio>
-  </ion-item>
-  <ion-item class="transparent-item" lines="none">
-    <ion-label>No</ion-label>
-    <ion-radio slot="start" [value]="6"></ion-radio>
-  </ion-item>
-  <ion-item *ngIf="question.is_na === '1'" class="transparent-item" lines="none">
-    <ion-label>NA</ion-label>
-    <ion-radio slot="start" [value]="4"></ion-radio>
-  </ion-item>
-      </ion-radio-group>
+    <!-- OPTIONS block -->
+    <div class="options margin-top-10">
 
-<ng-container *ngIf="question.option_type === '4' || question.type_id === '4'">
-  <ion-radio-group [(ngModel)]="question.selectedOption"
-                   (ngModelChange)="onOptionChange(question, $event)">
-    
-    <div class="rating-option-column">
+      <!-- ===== SCALE (type_id === '2') ===== -->
+      <div *ngIf="isScale(question)" class="two-col-group">
+        <ion-radio-group
+          [(ngModel)]="question.selectedOption"
+          (ngModelChange)="onOptionChange(question, $event)">
+          
+          <div class="two-col option-row">
+            <div class="col-label low-percentage">&lt;60%</div>
+            <div class="col-radio"></div>
+          </div>
 
-      <div *ngFor="let r of question.ratingOptions"
-           class="rating-option-row"
-           [attr.aria-checked]="question.selectedOption === r.id ? 'true' : 'false'">
+          <!-- scaleOptions uses IDs 1,2,3,8,9 (labels 1..5) -->
+          <div class="two-col option-row" *ngFor="let s of scaleOptions">
+            <div class="col-label">{{ s.label }}</div>
+            <div class="col-radio">
+              <ion-radio [value]="s.id" slot="end"></ion-radio>
+            </div>
+          </div>
 
-        <!-- RADIO BUTTON -->
-        <div class="rating-radio-cell">
-          <ion-radio class="rating-radio" [value]="r.id"></ion-radio>
-        </div>
-
-        <!-- LABEL + DESCRIPTION -->
-        <div class="rating-text-cell">
-          <div class="rating-title">{{ r.label }}</div>
-          <div class="rating-description" *ngIf="r.description">{{ r.description }}</div>
-        </div>
-
+          <div class="two-col option-row">
+            <div class="col-label high-percentage">&gt;90%</div>
+            <div class="col-radio"></div>
+          </div>
+        </ion-radio-group>
       </div>
+
+      <!-- ===== YES / NO / NA (type_id === '1') ===== -->
+      <div *ngIf="isYesNo(question)" class="two-col-group">
+        <ion-radio-group
+          [(ngModel)]="question.selectedOption"
+          (ngModelChange)="onOptionChange(question, $event)">
+          
+          <div class="two-col option-row" *ngIf="question.is_na === '1' ">
+            <div class="col-label">N/A</div>
+            <div class="col-radio">
+              <ion-radio [value]="4" slot="end"></ion-radio>
+            </div>
+          </div>
+
+          <div class="two-col option-row">
+            <div class="col-label">Yes</div>
+            <div class="col-radio">
+              <ion-radio [value]="5" slot="end"></ion-radio>
+            </div>
+          </div>
+
+          <div class="two-col option-row">
+            <div class="col-label">No</div>
+            <div class="col-radio">
+              <ion-radio [value]="6" slot="end"></ion-radio>
+            </div>
+          </div>
+        </ion-radio-group>
+      </div>
+
+      <!-- ===== RATING (type_id === '4' OR option_type === '4') ===== -->
+      <ng-container *ngIf="isRating(question)">
+        <ion-radio-group
+          [(ngModel)]="question.selectedOption"
+          (ngModelChange)="onOptionChange(question, $event)">
+          
+          <ng-container *ngFor="let r of ratingOptions">
+  <div class="two-col option-row match-radio-item" [attr.aria-checked]="question.selectedOption === r.id ? 'true' : 'false'">
+    <div class="col-label match-radio-label">
+      <div class="match-title">{{ r.label }}</div>
+      <div class="match-desc" *ngIf="r.description">{{ r.description }}</div>
     </div>
-
-  </ion-radio-group>
+    <div class="col-radio">
+      <ion-radio [value]="r.id" slot="end"></ion-radio>
+    </div>
+  </div>
 </ng-container>
-      </div>
+
+
+        </ion-radio-group>
+      </ng-container>
+
+    </div> <!-- /.options -->
+
 
       <div class="remarks-upload-container">
         <ion-label class="remarks">Remarks:</ion-label>
-        <ion-input type="text" placeholder="Enter Remark"
-                   [(ngModel)]="question.remarks" class="ionremarks"></ion-input>
+        <ion-input
+          type="text"
+          placeholder="Enter Remark"
+          [(ngModel)]="question.remarks"
+          class="ionremarks"
+        ></ion-input>
 
-        <ion-button class="upload-button camerabutton" fill="clear" (click)="selectImage(i)">
-          <ion-icon name="camera-outline" class="orange" style="color:#e66b24 !important;"></ion-icon>
+        <!-- Upload Image Button -->
+        <ion-button
+          class="upload-button camerabutton"
+          fill="clear"
+          (click)="selectImage(i)"
+        >
+          <ion-icon
+            name="camera-outline"
+            class="orange"
+            style="color: #e66b24 !important"
+          ></ion-icon>
         </ion-button>
       </div>
 
-      <!-- Multiple images per question -->
-      <div class="image-preview-container" *ngIf="photos[i]?.length">
-        <div *ngFor="let photo of photos[i]; let j = index" class="image-thumbnail">
-          <img [src]="photo.base64" alt="Captured Image">
-          <ion-icon name="close-circle" class="delete-icon" (click)="removeQuestionImage(i, j)"></ion-icon>
+      <!-- Uploaded Images Preview -->
+      <div
+        class="image-preview-container"
+        *ngIf="photos[i] && photos[i].length > 0"
+      >
+        <div
+          *ngFor="let photo of photos[i]; let j = index"
+          class="image-thumbnail"
+        >
+          <img [src]="photo.base64" alt="Captured Image" />
+          <ion-icon
+            name="close-circle"
+            class="delete-icon"
+            (click)="removeQuestionImage(i, j)"
+          ></ion-icon>
         </div>
       </div>
     </div>
 
-    <ion-textarea [(ngModel)]="feedback"
-                  placeholder="Enter your Questionnaire feedback here..."
-                  maxlength="500"
-                  fill="outline"
-                  label-placement="stacked"
-                  class="custom-textarea">
-    </ion-textarea>
+ 
 
-    <hr>
-
-    <!-- Feedback sections (optional, multi-images) -->
-    <div class="feedback-card" *ngFor="let feedbackItem of feedbackImages; let idx = index">
+    <div
+      class="feedback-card"
+      *ngFor="let feedbackItem of feedbackImages; let idx = index"
+    >
       <div class="textarea-container">
-        <ion-textarea [(ngModel)]="feedbackItem.caption"
-                      placeholder="Enter feedback..."
-                      autoGrow="true"
-                      class="feedback-textarea"></ion-textarea>
-
-        <ion-icon name="close" class="remove-icon" (click)="removeFeedbackSection(idx)"></ion-icon>
-        <ion-icon name="camera-outline" class="camera-icon" (click)="selectFeedbackImage(idx)"></ion-icon>
+        <ion-textarea
+          [(ngModel)]="feedbackItem.caption"
+          placeholder="Enter feedback..."
+          autoGrow="true"
+          class="feedback-textarea"
+        ></ion-textarea>
+        <ion-icon
+          name="close"
+          class="remove-icon"
+          (click)="removeFeedbackSection(idx)"
+        ></ion-icon>
+        <ion-icon
+          name="camera-outline"
+          class="camera-icon"
+          (click)="selectFeedbackImage(idx)"
+        ></ion-icon>
       </div>
 
+      <!-- NEW -->
       <div class="feedback-preview-multi" *ngIf="feedbackItem.images.length">
-        <div class="image-thumbnail" *ngFor="let img of feedbackItem.images; let k = index">
+        <div
+          class="image-thumbnail"
+          *ngFor="let img of feedbackItem.images; let k = index"
+        >
           <img [src]="img" alt="Feedback Image" />
-          <ion-icon name="close-circle" class="delete-icon" (click)="removeFeedbackImage(idx, k)"></ion-icon>
+          <ion-icon
+            name="close-circle"
+            class="delete-icon"
+            (click)="removeFeedbackImage(idx, k)"
+          ></ion-icon>
         </div>
       </div>
     </div>
+
 
     <div class="add-feedback-btn">
-      <ion-button expand="full" (click)="addFeedbackSection()" class="products_buttons">
+      <ion-button
+        expand="full"
+        (click)="addFeedbackSection()"
+        class="products_buttons"
+      >
         <ion-icon name="add-circle-outline" slot="start"></ion-icon>
         Add Feedback
       </ion-button>
     </div>
 
+    <!-- Submit Button -->
     <div class="submit-button">
-      <ion-button expand="full" (click)="onSubmitClick()" class="products_buttons">
+      <ion-button
+        expand="full"
+        (click)="onSubmitClick()"
+        class="products_buttons"
+      >
         Submit Answers
       </ion-button>
     </div>
-  </div>
 </ion-content>
+
 
 <app-footer></app-footer>
